<resources>
    <string name="app_name">AppProjet</string>
    <string name="logo_de_la_compagnie">Logo de la compagnie</string>
    <string name="todo">TODO</string>
    <string name="proprietes_disponibles">Propriétés disponibles!</string>
    <string name="name">Name</string>
    <string name="formulaire_d_inscription">Formulaire d\'inscription</string>
    <string name="pr_nom">Prénom</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="courriel_lectronique">Courriel électronique</string>
    <string name="image_pour_courriel">Image pour courriel</string>
    <string name="type_de_compte">Type de compte</string>
    <string name="logo_page_inscription">logo page inscription</string>
    <string name="soumettre">Soumettre</string>
    <string name="annuler">Annuler</string>
    <string name="boutton_pour_inscription">boutton pour inscription</string>
    <string name="image_du_logo">image du logo</string>
    <string name="button_pour_s_inscrire">Button pour s\'inscrire</string>
    <string name="login">Login</string>
    <string name="pas_de_compte_inscription_ici">Pas de compte ? Inscription ici !</string>
    <string name="authentification">Authentification</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="courriel">Courriel</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">Connexion</string>
    <string name="pas_de_compte_inscrivez_vous">Pas de compte? Inscrivez-vous</string>
    <string name="nom">Nom</string>
    <string name="image_utilisateur">image utilisateur</string>
    <string name="image_pour_telephone">image pour telephone</string>
    <string name="bonjour_que_souhaitez_vous_faire">Bonjour, que souhaitez-vous faire?</string>
    <string name="ajouter_propri_t">Ajouter propriété</string>
    <string name="modifier_propri_t">Modifier propriété</string>
    <string name="retour_la_page_principale">Retour à la page principale</string>
    <string name="contacter_propri_taire">Contacter propriétaire</string>
    <string name="adresse">Adresse</string>
    <string name="animaux">Animaux</string>
    <string name="arrondissement">Arrondissement</string>
    <string name="superficie">Superficie</string>
    <string name="stationnement">Stationnement</string>
    <string name="prix">Prix</string>
    <string name="fumeur">Fumeur</string>
    <string name="nombre_de_chambres">Nombre de chambres</string>
    <string name="confirmation_mot_de_passe">confirmation mot de passe</string>
    <string name="ajout_nouv_app">Ajout d\'une nouvelle appartement</string>
    <string name="remplir_tout">Veuillez remplir tous les champs suivants</string>
    <string name="inf_gene">Information génerale de l\'appartement</string>
    <string name="adress">Adresse</string>
    <string name="apto"># Apto </string>
    <string name="codePostal">Code Postal</string>
    <string name="nbChambres">Nombre de chambres ?</string>
    <string name="nbStationnement">Nombre de stationnement ?</string>
    <string name="permisAnimaux">Permission des animaux ?</string>
    <string name="supf">Superficie</string>
    <string name="prixNouvelleProp">Prix ($ CAD)</string>
    <string name="fumeurNouvelleProp">Fumeur</string>
    <string name="Description">Description</string>
    <string name="infContact">Information de contact</string>
    <string name="ajoutPhotos">Ajouter des photos et soumettre le formulaire</string>
    <string name="ajoutphotospage">Ajouts des photos de l\'appartement</string>
    <string name="indicationphotos">Veuillez minimalement soumettre 3 photos</string>
    <string name="Photo_1">Photo 1</string>
    <string name="Photo_2">Photo 2</string>
    <string name="Photo_3">Photo 3</string>
    <string name="Photo_4">Photo 4</string>
    <string name="Photo_5">Photo 5</string>
    <string name="Photo_6">Photo 6</string>
    <string name="btn_telecharger_photos">Telecharger</string>


</resources>