<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageInscription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titreFormulaire"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/green2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/titreTexte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulaire_d_inscription"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImage"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="VisualLintOverlap,TextContrastCheck" />

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="184dp"
            android:layout_height="117dp"
            android:contentDescription="@string/image_du_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo"
            tools:ignore="VisualLintBounds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formulaireLayout"
        android:layout_width="361dp"
        android:layout_height="0dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreFormulaire"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageCourriel"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image_pour_courriel"
            app:layout_constraintEnd_toStartOf="@+id/emailFormulaire"
            app:layout_constraintTop_toBottomOf="@+id/telephoneUtilisateur"
            app:srcCompat="@drawable/mail" />

        <ImageView
            android:id="@+id/telephoneUtilisateur"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/image_pour_telephone"
            app:layout_constraintEnd_toStartOf="@+id/telephoneFormulaire"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUtilisateur"
            app:srcCompat="@drawable/telephone" />

        <EditText
            android:id="@+id/prenomFormulaire"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:text="@string/nom"
            android:textColor="@color/darkgray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomFormulaire"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/nomFormulaire"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:text="@string/pr_nom"
            android:textColor="@color/darkgray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/telephoneFormulaire"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/num_ro_de_t_l_phone"
            android:inputType="phone"
            android:textColorHint="@color/darkgray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prenomFormulaire"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/emailFormulaire"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/courriel_lectronique"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/darkgray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.752"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telephoneFormulaire" />

        <Spinner
            android:id="@+id/selectionFormulaire"
            android:layout_width="300dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/typeFormulaire" />

        <TextView
            android:id="@+id/typeFormulaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/type_de_compte"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailFormulaire"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/soumettreFormulaire"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/green"
            android:text="@string/soumettre"
            android:textColorLink="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/annulerInscription"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/annulerInscription"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/green"
            android:text="@string/annuler"
            android:textColorLink="#03A9F4"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/imageUtilisateur"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/image_utilisateur"
            app:layout_constraintEnd_toStartOf="@+id/nomFormulaire"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>