<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81FFFFFF"
    tools:context=".PageAfficheAppartment"
    tools:layout_editor_absoluteX="82dp"
    tools:layout_editor_absoluteY="-590dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/espacePhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        tools:layout_editor_absoluteX="0dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionsVisualisation"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:background="@color/green2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/boutonAnnuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/annuler"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonContacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/contacter_propri_taire"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_du_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.081"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/texteBienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proprietes_disponibles"
            android:textColor="@color/green"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logoImage"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/texteResultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FC8D8D8D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        app:layout_constraintVertical_bias="0.031" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/espaceInfos"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:layout_constraintTop_toBottomOf="@+id/espacePhoto"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/titreAdresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adresse"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titrePrix" />

        <TextView
            android:id="@+id/titrePrix"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/prix"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titreChambres"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_chambres"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titreArrondissement"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/titreArrondissement"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/arrondissement"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titreAdresse" />

        <TextView
            android:id="@+id/titreSuperficie"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/superficie"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titreChambres" />

        <TextView
            android:id="@+id/titreAnimaux"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/animaux"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titreSuperficie" />

        <TextView
            android:id="@+id/titreFumeur"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/fumeur"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titreAnimaux" />

        <TextView
            android:id="@+id/titreStationnement"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/stationnement"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titreFumeur" />

        <TextView
            android:id="@+id/prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titrePrix"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titreAdresse"
            app:layout_constraintTop_toBottomOf="@+id/titrePrix" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titreStationnement" />

        <TextView
            android:id="@+id/arrondisement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titreArrondissement"
            app:layout_constraintTop_toBottomOf="@+id/titreAdresse" />

        <TextView
            android:id="@+id/nombreChambres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titreChambres"
            app:layout_constraintTop_toBottomOf="@+id/titreArrondissement" />

        <TextView
            android:id="@+id/superficie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titreSuperficie"
            app:layout_constraintTop_toBottomOf="@+id/titreChambres" />

        <TextView
            android:id="@+id/animaux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titreAnimaux"
            app:layout_constraintTop_toBottomOf="@+id/titreSuperficie" />

        <TextView
            android:id="@+id/fumeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titreFumeur"
            app:layout_constraintTop_toBottomOf="@+id/titreAnimaux" />

        <TextView
            android:id="@+id/stationnement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/titreStationnement"
            app:layout_constraintTop_toBottomOf="@+id/titreFumeur" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>