<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81FFFFFF"
    tools:context=".PagePrincipaleVisualisation"
    tools:layout_editor_absoluteX="82dp"
    tools:layout_editor_absoluteY="-590dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#2A00BCD4"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="92dp"
            android:layout_height="76dp"
            android:contentDescription="@string/image_du_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.081"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/texteBienvenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:text="@string/bienvenu_votre_espace_location"
            android:textColor="#3F51B5"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.259" />

        <ImageButton
            android:id="@+id/buttonFiltre"
            style="@android:style/Widget.DeviceDefault.Light.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.957"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.836"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size"
            app:tint="#3F51B5"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/texteResultat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FC8D8D8D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduction"
        app:layout_constraintVertical_bias="0.031" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionsVisualisation"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:background="#2A00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/bttnInscription"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:contentDescription="@string/boutton_pour_inscription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@android:drawable/ic_menu_edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>